# task-fingerprinting

./: .gitignore  README.md
MSD_cache/: msd_results.csv  task_infos.csv
MSD_cache/distances/: FID-3_2_1.csv  KLD-PP:NN-3_2_1.csv  KLD-PP:NS-1000-BINS-3_2_1.csv  KLD-PP:NS-W:SN-1000-BINS-3_2_1.csv  KLD-PP:NS-W:TS-100-BINS-3_2_1.csv  MMD-geo-sinkhorn-0.01-3_2_1.csv  SEMANTIC.csv  VDNA-PP:NN-1000-BINS-3_2_1.csv
cache/: README.md  dim_df.csv  sam_df.csv  task_infos.csv
cache/distances/: COS-PP:NN-100-BINS.csv  COS-PP:NN-1000-BINS.csv  COS-PP:NN-5-BINS.csv  COS-PP:NN.csv  COS-PP:SS-100-BINS.csv  COS-PP:SS-1000-BINS.csv  COS-PP:SS-5-BINS.csv  (+1060 more)
data/: README.md
figures/: advanced_task_infos.csv  model_infos.csv
notebooks/: 0_fill_cache.ipynb  10_scenario_similarity.ipynb  11_model_infos.ipynb  12_fingerprint_visual.ipynb  13_msd.ipynb  14_vary_probe.ipynb  1_develop_comparison.ipynb  2_internal_validation.ipynb  3_external_validation.ipynb  4_vary_bins.ipynb  5_vary_samples.ipynb  7_full_sized_exps.ipynb  8_tasks_infos.ipynb  9_complexity.ipynb  README.md
tf/: README.md  pyproject.toml  setup.cfg
tf/src/mml_tf/: activate.py  aggregate.py  distances.py  domains.py  evaluation.py  experiments.py  paths.py  ranking.py  representations.py  tasks.py  variants.py  visualization.py
tf/src/mml_tf/configs/augmentations/: load_aa_from.yaml
tf/src/mml_tf/configs/mode/: aatrain.yaml
tf/src/mml_tf/configs/tasks/: pami.yaml  pami_shrink.yaml  pami_shrink_mix.yaml  pami_shrinkable_300.yaml  pami_shrinkable_800.yaml  pami_test.yaml  pami_train.yaml  pami_train_shrink.yaml  pami_train_variants.yaml
(+346 files in other folders)
