[metadata]
name = mml-tf
version = attr: mml_tf.__version__
description = This is the MML Task Fingerprinting plugin, providing results for respective publication.
long_description = file: README.md
long_description_content_type = text/markdown
author = Patrick Godau
author_email = patrick.godau@dkfz-heidelberg.de
url = https://git.dkfz.de/imsy/ise/mml
classifiers =
    Natural Language :: English
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Image Recognition
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Image Processing
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Version Control :: Git
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Environment :: GPU
    Intended Audience :: Science/Research
    Typing :: Typed

[options]
python_requires = >=3.8
package_dir =
    =src
packages = find:
zip_safe = no
include_package_data = True
install_requires =
    mml-core>=1.0.4
    mml-similarity>=0.5.3
    kaleido
    lxml


[options.entry_points]
mml.plugins =
    mml-tf = mml_tf.activate

[options.packages.find]
where = src

[flake8]
max-line-length = 160